hphp/test/zend/bad/ext/mysqli/tests/mysqli_class_mysqli_reflection.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('connect.inc');

/*
Let's not deal with cross-version issues in the EXPECTF/UEXPECTF.
Most of the things which we test are covered by mysqli_class_*_interface.phpt.
Those tests go into the details and are aimed to be a development tool, no more.
*/
if (!$IS_MYSQLND)
	die("skip Test has been written for the latest version of mysqlnd only");
if ($MYSQLND_VERSION < 50004)
	die("skip Test requires mysqlnd Revision 5.0.4 or newer");

?>